hive-db/tests/typesafety/insert.stderr
error[E0308]: mismatched types
  --> tests/typesafety/insert.rs:15:28
   |
15 |     tree.b_insert(&my_key, wrong_type).unwrap();
   |          --------          ^^^^^^^^^^ expected `u8`, found `str`
   |          |
   |          arguments to this function are incorrect
   |
   = note: expected reference `&u8`
              found reference `&str`
note: associated function defined here
  --> src/db.rs
   |
   |     fn b_insert<T>(&self, key: &Key<T>, value: &T) -> SledResult<Option<T>>
   |        ^^^^^^^^
